# Loopable-Samples

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/oboelibtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ooRAW48KHz.raw
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLIsts.txt  Constants.h  jni_bridge.cpp
app/src/main/cpp/AudioSources/: AAssetDataSource.cpp  AAssetDataSource.h  AudioSource.h  DataSource.h  LoopableAAssetAudio.cpp  LoopableAAssetAudio.h
app/src/main/cpp/Callbacks/: DefaultDataCallback.h  DefaultErrorCallback.h  LatencyTuningCallback.cpp  LatencyTuningCallback.h
app/src/main/cpp/Interfaces/: IRenderableAudio.h  IRestartable.h  ITappable.h
app/src/main/cpp/Utilities/: logging_macros.h  trace.cpp  trace.h
app/src/main/cpp/iir/: CMakeLists.txt
app/src/main/java/com/example/oboelibtest/: AudioEngine.kt  MainActivity.kt  Utilities.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/oboelibtest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
